--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,15 +182,15 @@ hr {
     border-style: solid;
     border-color: #ccc;
     border-width: 1px;
-    border-radius: 50%
+    border-radius: 50%;
     margin: 0 auto;
 }
 
-#circle-cover-bg {
+#circle-cover-bg (
     background: url("../images/ethos-center-image.jpg") no-repeat center center
     height: 100%;
     border-radius: 50%
-}
+)
 
 /*event times*/
 
