--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,10 @@
 * {
     margin: 0;
     padding: 0;
-    border: none
+    border: none;
 }
 
-body {}
+body {
     font-family: Lato, sans-serif;
     font-weight: 300;
     color: #3a3a3a;
@@ -14,22 +14,24 @@ body {}
 
 /* headings and logo */
 
-h1, h2 {
-    font-family: Oswald, sans-serif;
-    text-transform: uppercase<
+h1,
+h2 {
+    font-family: serif, sans-serif;
+    text-transform: uppercase;
     letter-spacing: 4px;
     color: #252525;
 }
 
 #logo {
-    float: left:
+    float: left;
     font-size: 280px;
     margin-left: 30px;
 }
 
 /*navigation links*/
 
-#menu, #logo {
+#menu,
+#logo {
     line-height: 75px;
 }
 
@@ -49,7 +51,7 @@ h1, h2 {
     color: inherit;
 }
 
-#menu a: hover {
+#menu a :hover {
     border-bottom: 1px solid #3a3a3a;
 }
 
@@ -67,19 +69,21 @@ h1, h2 {
     position: relative;
 }
 
-#cover-text, #cover-text h2 {
+#cover-text,
+#cover-text h2 {
     color: #fff;
 }
 
 #hero-image {
     height: 600px;
     width: 100%;
-    background: url("../image/hero-image.webp"); no-repeat center center;
+    background: url("../image/hero-image.webp") no-repeat center center;
 
     /*animates zoom effect on loading page*/
+
     animation-name: hero-zoom;
-    animation-duration: 5s:
-    animation-fill-mode: foward;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
 
 }
 
@@ -87,31 +91,32 @@ h1, h2 {
 
 @keyframes hero-zoom {
     from {
-        tranfrom: scale(1);
+        transform: scale(1);
     }
+
     to {
-        tranfrom: scale(1.1);
+        transform: scale(1.1);
     }
 }
 
 #cover-text {
     font-size: 130%;
     font-family: Oswald, sans-serif;
-    text-tranfrom: uppercase
+    text-transform: uppercase;
     letter-spacing: 4px;
 
-width: 300px;
-height: 200px:
+    width: 300px;
+    height: 200px;
 
-padding-top: 40px;
-padding-left: 10px;
+    padding-top: 40px;
+    padding-left: 10px;
 
-background-color: rgba(241, 109, 107, .7)
+    background-color: rgba(241, 109, 107, .7);
 
-bottom: 30px;
-right: 150px;
+    bottom: 30px;
+    right: 150px;
 
-position: absolute;
+    position: absolute;
 }
 
 /*club ethos*/
@@ -124,23 +129,25 @@ position: absolute;
     padding-top: 30px;
     width: 33%;
     float: left;
-    
+
 }
 
 #right-about {
     padding-top: 30px;
     width: 33%;
     float: right;
-    
+
 }
+
 #center-about {
-    
+
     width: 33%;
     margin: 0 auto;
     color: green;
 }
+
 hr {
-    border-top: 1px solid #3a3a3a
+    border-top: 1px solid #3a3a3a;
     width: 100%;
     margin: 5px;
 }
@@ -161,12 +168,12 @@ hr {
     margin-bottom: 50px;
 }
 
-.right-about-heading h2{
-    text.align: right;
+.right-about-heading h2 {
+    text-align: right;
 }
 
 .right-about-heading p {
-    text.align: right;
+    text-align: right;
 }
 
 #welcome {
@@ -186,17 +193,17 @@ hr {
     margin: 0 auto;
 }
 
-#circle-cover-bg (
-    background: url("../images/ethos-center-image.jpg") no-repeat center center
+#circle-cover-bg {
+    background: url("../images/ethos-center-image.jpg") no-repeat center center;
     height: 100%;
     border-radius: 50%
-)
+}
 
 /*event times*/
 
 #times {
-    background-image: url("../images/times-background.webp")
-    background-repeat: no-repear;
+    background-image: url("../images/times-background.webp");
+    background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     width: 100%;
@@ -211,12 +218,12 @@ hr {
     float: left;
     padding: 30px 0 0 10px;
     text-align: center;
-    border: 2px solid white
+    border: 2px solid white;
     box-sizing: border-box;
 }
 
 #times h2 {
-    color: fafafa;
+    color: #fafafa;
 }
 
 /*footer*/
@@ -227,9 +234,9 @@ footer {
 
 .social-networks {
     text-align: center;
-    }
+}
 
-.social-networks > li {
+.social-networks>li {
     display: inline;
 }
 
@@ -238,4 +245,33 @@ footer {
     margin: 1%;
     padding: 5%;
     color: #3a3a3a
+}
+
+@media screen and (max-width: 1200px) {
+    #club-ethos {
+        width: 65%;
+        height: 1200px;
+        margin: 0 auto;
+    }
+
+    #welcome {
+        padding: 30px 0;
+        margin: 0;
+    }
+
+    #left-about, #right-about {
+        width: 100%;
+        float: left;
+        padding: 0;
+    }
+    #center-about {
+        clear: both;
+        width: 100;
+        float: left;
+        padding: 0;
+    }
+
+    hr {
+        display: none;
+    }
 }
