--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,11 +259,13 @@ footer {
         margin: 0;
     }
 
-    #left-about, #right-about {
+    #left-about,
+    #right-about {
         width: 100%;
         float: left;
         padding: 0;
     }
+
     #center-about {
         clear: both;
         width: 100;
@@ -273,5 +275,15 @@ footer {
 
     hr {
         display: none;
+    }
+}
+
+@media screen and (max-width: 950px) {
+    menu {
+        clear: left;
+        float: left;
+        margin-left: 30px;
+        margin-bottom: 20px;
+        line-height: 25px;
     }
 }
