--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,7 @@ h3 {
 #logo {
     float: left;
     font-size: 200%;
+    margin-top: 15px;
     margin-left: 5%;
     color: #884f2b;
     font-family: Arial, Helvetica, sans-serif;
@@ -40,34 +41,8 @@ h3 {
 
 /* navigation links */
 
-#menu {
-    font-size: 110%;
-    letter-spacing: 4px;
-    color: #884f2b;
-}
-
-#logo,
-#menu {
-    line-height: 75px;
-}
-
-#menu li {
-    float: right;
-    list-style-type: none;
-    margin-right: 5%;
-}
-
-#menu a {
-    text-decoration: none;
-    color: inherit;
-}
-
-#menu a:hover {
-    border-bottom: 1px solid #3a3a3a;
-}
-
-.active {
-    border-bottom: 1px solid #3a3a3a;
+.nav-link{
+    color: #3a3a3a;
 }
 
 /* Hero image and cover text */
@@ -98,43 +73,12 @@ h3 {
 
 }
 
-#cover-text,
-#cover-text h2 {
-    color: #ffffff;
-}
-
-#cover-text {
-    font-size: 4vh;
-    font-family: Arial;
-    text-transform: uppercase;
-    letter-spacing: 0, 5vh;
-
-    width: 40vw;
-    height: 30vh;
-
-    padding-top: 5vh;
-    padding-left: 2vw;
-
-    background-color: rgba(241, 109, 107, .7);
-
-    bottom: 5vh;
-    right: 10vw;
-
-    position: absolute;
-
-}
-
-/* Latin ethos */
-
-/* #left-about {
-    padding-top: 2vh;
-} */
-
-/* #right-about {
-    padding-top: 5vh;
+.hr-food {
+    border-top: 1px solid white;
     width: 100%;
-    float: none;
-} */
+    height: 3px;
+    margin: 3vh 0;
+}
 
 hr {
     border-top: 1px solid #884f2b;
@@ -142,47 +86,6 @@ hr {
     height: 3px;
     margin: 3vh 0;
 }
-
-/* 
-.left-about-heading {
-    line-height: 2vh;
-    clear: both;
-    margin-bottom: 5vh;
-}
-
-.right-about-heading {
-    width: 30%;
-    float: left;
-    line-height: 2vh;
-    clear: both;
-    margin-bottom: 5vh;
-}
-
-.right-about-heading p {
-    text-align: right;
-}
-
-.right-about-heading h2 {
-    text-align: right;
-} */
-
-/* Latin ethos  image */
-
-/* #welcome {
-    margin: 2vh 0;
-    text-align: center;
-    font-size: 4vh;
-} */
-
-/* #circle-container {
-    width: 40vh;
-    height: 40vh;
-    padding: 5vh;
-    border-style: solid;
-    border-color: #5a848e;
-    border-width: 1vh;
-    margin: 0 auto;
-} */
 
 #to-restaurant {
     margin-top: 1vh;
@@ -200,24 +103,7 @@ hr {
     width: 500px;
 }
 
-/* .cuba-image {
-    top: 0;
-    right: 0;
-    width: 50%;
-    height: 100%;
-    background-image: url(../images/cuba.jpg);
-} */
 
-/* Event times */
-
-#times {
-    background-image: url('../images/group-friends.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    width: 100%;
-    overflow: hidden;
-}
 
 #restaurant h2,
 #restaurant h3 {
@@ -244,12 +130,43 @@ hr {
     color: black;
 }
 
+/* Form */
+.form-section {
+    min-height: calc(100vh - 200px);
+    background-image: url("../images/coffee.jpg");
+    background-size: cover;
+    padding: 20px 10% 0 10%;
+    flex-grow: 1;
+}
+
+
+.signup-form {
+    background-color: #f7f7f7;
+    padding: 20px;
+    border-radius: 5px;
+}
+
+label {
+    font-weight: bold;
+}
+
+.form-check {
+    margin-top: 10px;
+}
+
+.btn-primary {
+    background-color: #884f2b;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+}
+
+.btn-primary:hover {
+    background-color: #5a848e;
+}
 
 /* Footer */
-
-footer {
-    height: 10vh;
-}
 
 .social-networks {
     text-align: center;
@@ -265,59 +182,4 @@ footer {
     margin: 1%;
     padding: 2%;
     color: #3a3a3a;
-}
-
-/* Form */
-.form-section {
-    clear: left;
-    background: url(../images/coffee.jpg);
-    background-size: cover;
-    background-position: center;
-    height: 600px;
-}
-
-.signup-form {
-    margin: 20px 10% 0 0;
-    color: #fff;
-    background-color: rgba(60, 60, 60, 0.6);
-    max-width: 400px;
-    position: absolute;
-    left: 10%;
-    padding: 30px;
-}
-
-.signup-form>h2,
-h3 {
-    color: #fafafa;
-    margin-bottom: 20px;
-}
-
-.text-input {
-    background: transparent;
-    color: #fafafa;
-    width: 100%;
-    height: 25px;
-    margin: 5px 0 20px 0;
-    border: 1px solid #fafafa;
-    border-radius: 2px;
-}
-
-.text-input:hover {
-    border-color: #f16c6b;
-}
-
-.join-button {
-    margin-top: 20px;
-    border-radius: 2px;
-    padding: 15px 32px 15px 32px;
-    text-align: center;
-    font-size: 100%;
-    background-color: #f16c6b;
-    color: #fafafa;
-    display: block;
-}
-
-.join-button:hover {
-    background-color: #fafafa;
-    color: #f16c6b;
 }
